[package]
name = "ping-meister-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awaitgroup = "0.7.0"
clap = { version = "4.3.19", features = ["derive"] }
config = "0.13.3"
dns-lookup = "2.0.2"
reqwest = { version = "0.11.18", features = ["blocking"] }

serde = "1.0.177"
serde_yaml = "0.9.25"
tokio = { version = "1.29.1", features = ["full"] }

[target.'cfg(unix)'.dependencies]
tokio-ping = "0.3.0"

[target.'cfg(windows)'.dependencies]
winping = "0.10.1"

